--- a/public/assets/views/login.html
+++ b/public/assets/views/login.html
@@ -9,11 +9,11 @@
                     <div class="login-group">
                         <div class="form-group">
                             <label for="lg_username" class="sr-only">Username</label>
-                            <input type="text" class="form-control" id="lg_username" name="lg_username" placeholder="username">
+                            <input type="text" class="form-control" id="lg_username" name="lg_username" placeholder="username" ng-model="email">
                         </div>
                         <div class="form-group">
                             <label for="lg_password" class="sr-only">Password</label>
-                            <input type="password" class="form-control" id="lg_password" name="lg_password" placeholder="password">
+                            <input type="password" class="form-control" id="lg_password" name="lg_password" placeholder="password" ng-model="password">
                         </div>
                         <div class="form-group login-group-checkbox">
                             <input type="checkbox" id="lg_remember" name="lg_remember">
