--- a/public/assets/views/forgetPassword.html
+++ b/public/assets/views/forgetPassword.html
@@ -12,10 +12,10 @@
                     <div class="login-group">
                         <div class="form-group">
                             <label for="fp_email" class="sr-only">Email address</label>
-                            <input type="text" class="form-control" id="fp_email" name="fp_email" placeholder="email address">
+                            <input type="text" class="form-control" id="fp_email" name="fp_email" placeholder="email address" ng-model="fp_email">
                         </div>
                     </div>
-                    <button type="submit" class="login-button"><i class="fa fa-chevron-right"></i></button>
+                    <button type="submit" class="login-button" ng-click="fpEmail()"><i class="fa fa-chevron-right"></i></button>
                 </div>
                 <div class="etc-login-form">
                     <p>Already have an account? <a ng-href="/login"  >Login here</a></p>
