--- a/public/assets/views/dashboard.html
+++ b/public/assets/views/dashboard.html
@@ -1,22 +1,3 @@
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header"><a class="navbar-brand navbar-link" href="#"><strong>Result Predictor</strong></a>
-            <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-        </div>
-        <div class="collapse navbar-collapse" id="navcol-1">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="active" role="presentation"><a href="">My History</a></li>
-                <li role="presentation"><a href="" >My Analytics</a></li>
-                <li role="presentation"><a href="">My Predictor</a></li>
-                <li role="presentation"><a href="">Settings</a></li>
-                <li role="presentation"><a href="" style="color:#0000FF;" ng-click="logout()">Log out</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<div class="container " ng-app="dashboardApp">
-    <div ng-include="/assets/views/dashboardViews/myHistory.html">
-
-    </div>
-
+<div class="container">
+        <h1>hello from dashboardApp</h1>
 </div>
