--- a/public/assets/views/dashboardViews/myProfile.html
+++ b/public/assets/views/dashboardViews/myProfile.html
@@ -1,3 +1,44 @@
 <div class="container">
     myProfile
 </div>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-3 col-lg-offset-5 col-md-offset-3 col-sm-6">
+
+            <div class="card hovercard">
+                <div class="cardheader">
+
+                </div>
+                <div class="avatar centre">
+                    <img alt="" src="http://dripai.com/wp-content/uploads/2015/04/ai_face.png.png">
+                </div>
+                <div class="info">
+                    <div class="title">
+                        <a target="_blank" href="http://dripai.com/wp-content/uploads/2015/04/ai_face.png.png">Script Eden</a>
+                    </div>
+                    <div class="desc">Passionate designer</div>
+                    <div class="desc">Curious developer</div>
+                    <div class="desc">Tech geek</div>
+                </div>
+                <!-- <div class="bottom">
+                    <a class="btn btn-primary btn-twitter btn-sm" href="https://twitter.com/webmaniac">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                    <a class="btn btn-danger btn-sm" rel="publisher"
+                        href="https://plus.google.com/+ahmshahnuralam">
+                        <i class="fa fa-google-plus"></i>
+                    </a>
+                    <a class="btn btn-primary btn-sm" rel="publisher"
+                        href="https://plus.google.com/shahnuralam">
+                        <i class="fa fa-facebook"></i>
+                    </a>
+                    <a class="btn btn-warning btn-sm" rel="publisher" href="https://plus.google.com/shahnuralam">
+                        <i class="fa fa-behance"></i>
+                    </a>
+                </div> -->
+            </div>
+
+        </div>
+
+    </div>
+</div>
