--- a/public/assets/views/dashboardViews/myPredictor.html
+++ b/public/assets/views/dashboardViews/myPredictor.html
@@ -1,3 +1,9 @@
 <div class="container">
-    predictor
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-8 col-xs-offset-2 ">
+                my predictor
+            </div>
+        </div>
+    </div>
 </div>
