updated predicator controller and view

--- a/public/assets/views/dashboardViews/myHistory.html
+++ b/public/assets/views/dashboardViews/myHistory.html
@@ -100,6 +100,95 @@
                     <input type="text" class="form-control" ng-model="class12Pkstd" placeholder="% of pakistan studies marks">
                     <button type="submit" class="btn btn-primary" ng-click="class12MarksUpload()">Update Marks</button>
                 </div>
+                <!-- for university level -->
+                <div class="form-group">
+                        <h2 style="color:#FFFFFF;text-align:center;">Semester 1</h2>
+                        <input type="text" class="form-control" ng-model="subject11" placeholder="enter subject A % marks">
+                        <input type="text" class="form-control" ng-model="subject12" placeholder="enter subject B % marks">
+                        <input type="text" class="form-control" ng-model="subject13" placeholder="enter subject C % marks">
+                        <input type="text" class="form-control" ng-model="subject14" placeholder="enter subject D % marks">
+                        <input type="text" class="form-control" ng-model="subject15" placeholder="enter subject E % marks">
+                        <input type="text" class="form-control" ng-model="subject16" placeholder="enter subject F % marks">
+                        
+                        <button type="submit" class="btn btn-primary" ng-click="semester1MarksUpload()">Update Marks</button>
+                    </div>
+                    
+                <div class="form-group">
+                        <h2 style="color:#FFFFFF;text-align:center;">Semester 2</h2>
+                        <input type="text" class="form-control" ng-model="subject21" placeholder="enter subject A % marks">
+                        <input type="text" class="form-control" ng-model="subject22" placeholder="enter subject B % marks">
+                        <input type="text" class="form-control" ng-model="subject23" placeholder="enter subject C % marks">
+                        <input type="text" class="form-control" ng-model="subject24" placeholder="enter subject D % marks">
+                        <input type="text" class="form-control" ng-model="subject25" placeholder="enter subject E % marks">
+                        <input type="text" class="form-control" ng-model="subject26" placeholder="enter subject F % marks">
+                        <button type="submit" class="btn btn-primary" ng-click="semester2MarksUpload()">Update Marks</button>
+                    </div>
+                    
+                <div class="form-group">
+                        <h2 style="color:#FFFFFF;text-align:center;">Semester 3</h2>
+                        <input type="text" class="form-control" ng-model="subject31" placeholder="enter subject A % marks">
+                        <input type="text" class="form-control" ng-model="subject32" placeholder="enter subject B % marks">
+                        <input type="text" class="form-control" ng-model="subject33" placeholder="enter subject C % marks">
+                        <input type="text" class="form-control" ng-model="subject34" placeholder="enter subject D % marks">
+                        <input type="text" class="form-control" ng-model="subject35" placeholder="enter subject E % marks">
+                        <input type="text" class="form-control" ng-model="subject36" placeholder="enter subject F % marks">
+                        <button type="submit" class="btn btn-primary" ng-click="semester3MarksUpload()">Update Marks</button>
+                    </div>
+                    
+                <div class="form-group">
+                        <h2 style="color:#FFFFFF;text-align:center;">Semester 4</h2>
+                        <input type="text" class="form-control" ng-model="subject41" placeholder="enter subject A % marks">
+                        <input type="text" class="form-control" ng-model="subject42" placeholder="enter subject B % marks">
+                        <input type="text" class="form-control" ng-model="subject43" placeholder="enter subject C % marks">
+                        <input type="text" class="form-control" ng-model="subject44" placeholder="enter subject D % marks">
+                        <input type="text" class="form-control" ng-model="subject45" placeholder="enter subject E % marks">
+                        <input type="text" class="form-control" ng-model="subject46" placeholder="enter subject F % marks">
+                        <button type="submit" class="btn btn-primary" ng-click="semester4MarksUpload()">Update Marks</button>
+                    </div>
+                    
+                <div class="form-group">
+                        <h2 style="color:#FFFFFF;text-align:center;">Semester 5</h2>
+                        <input type="text" class="form-control" ng-model="subject51" placeholder="enter subject A % marks">
+                        <input type="text" class="form-control" ng-model="subject52" placeholder="enter subject B % marks">
+                        <input type="text" class="form-control" ng-model="subject53" placeholder="enter subject C % marks">
+                        <input type="text" class="form-control" ng-model="subject54" placeholder="enter subject D % marks">
+                        <input type="text" class="form-control" ng-model="subject55" placeholder="enter subject E % marks">
+                        <input type="text" class="form-control" ng-model="subject56" placeholder="enter subject F % marks">
+                        <button type="submit" class="btn btn-primary" ng-click="semester5MarksUpload()">Update Marks</button>
+                    </div>
+                    
+                <div class="form-group">
+                        <h2 style="color:#FFFFFF;text-align:center;">Semester 6</h2>
+                        <input type="text" class="form-control" ng-model="subject61" placeholder="enter subject A % marks">
+                        <input type="text" class="form-control" ng-model="subject62" placeholder="enter subject B % marks">
+                        <input type="text" class="form-control" ng-model="subject63" placeholder="enter subject C % marks">
+                        <input type="text" class="form-control" ng-model="subject64" placeholder="enter subject D % marks">
+                        <input type="text" class="form-control" ng-model="subject65" placeholder="enter subject E % marks">
+                        <input type="text" class="form-control" ng-model="subject66" placeholder="enter subject F % marks">
+                        <button type="submit" class="btn btn-primary" ng-click="semester6MarksUpload()">Update Marks</button>
+                    </div>
+                    
+                <div class="form-group">
+                        <h2 style="color:#FFFFFF;text-align:center;">Semester 7</h2>
+                        <input type="text" class="form-control" ng-model="subject71" placeholder="enter subject A % marks">
+                        <input type="text" class="form-control" ng-model="subject72" placeholder="enter subject B % marks">
+                        <input type="text" class="form-control" ng-model="subject73" placeholder="enter subject C % marks">
+                        <input type="text" class="form-control" ng-model="subject74" placeholder="enter subject D % marks">
+                        <input type="text" class="form-control" ng-model="subject75" placeholder="enter subject E % marks">
+                        <input type="text" class="form-control" ng-model="subject76" placeholder="enter subject F % marks">
+                        <button type="submit" class="btn btn-primary" ng-click="semester7MarksUpload()">Update Marks</button>
+                    </div>
+                    
+                <div class="form-group">
+                        <h2 style="color:#FFFFFF;text-align:center;">Semester 8</h2>
+                        <input type="text" class="form-control" ng-model="subject81" placeholder="enter subject A % marks">
+                        <input type="text" class="form-control" ng-model="subject82" placeholder="enter subject B % marks">
+                        <input type="text" class="form-control" ng-model="subject83" placeholder="enter subject C % marks">
+                        <input type="text" class="form-control" ng-model="subject84" placeholder="enter subject D % marks">
+                        <input type="text" class="form-control" ng-model="subject85" placeholder="enter subject E % marks">
+                        <input type="text" class="form-control" ng-model="subject86" placeholder="enter subject F % marks">
+                        <button type="submit" class="btn btn-primary" ng-click="semester8MarksUpload()">Update Marks</button>
+                    </div>
             </div>
         </div>
 </div>
