--- a/public/assets/views/dashboardViews/myAnalytics.html
+++ b/public/assets/views/dashboardViews/myAnalytics.html
@@ -40,6 +40,46 @@
             <div class="col-xs-8 col-xs-offset-2 ">
                 <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSource12}}"></div>
             </div>
+        </div><br>
+        <div class="row">
+            <div class="col-xs-8 col-xs-offset-2 ">
+                <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSourceSem1}}"></div>
+            </div>
+        </div><br>
+        <div class="row">
+            <div class="col-xs-8 col-xs-offset-2 ">
+                <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSourceSem2}}"></div>
+            </div>
+        </div><br>
+        <div class="row">
+            <div class="col-xs-8 col-xs-offset-2 ">
+                <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSourceSem3}}"></div>
+            </div>
+        </div><br>
+        <div class="row">
+            <div class="col-xs-8 col-xs-offset-2 ">
+                <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSourceSem4}}"></div>
+            </div>
+        </div><br>
+        <div class="row">
+            <div class="col-xs-8 col-xs-offset-2 ">
+                <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSourceSem5}}"></div>
+            </div>
+        </div><br>
+        <div class="row">
+            <div class="col-xs-8 col-xs-offset-2 ">
+                <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSourceSem6}}"></div>
+            </div>
+        </div><br>
+        <div class="row">
+            <div class="col-xs-8 col-xs-offset-2 ">
+                <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSourceSem7}}"></div>
+            </div>
+        </div><br>
+        <div class="row">
+            <div class="col-xs-8 col-xs-offset-2 ">
+                <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSourceSem8}}"></div>
+            </div>
         </div>
     </div>
 </div>
