updated all pakages for final build

--- a/public/assets/views/dashboardViews/myPredictor.html
+++ b/public/assets/views/dashboardViews/myPredictor.html
@@ -32,6 +32,8 @@
                         </select><br>
                         
                         <button type="submit" class="btn btn-primary" ng-click="predictMyResult()">Predict Marks</button>
+                        <br>
+                        <h5 style="color:rgb(204, 212, 114);text-align:center;font-weight:bold;" ng-hide="outcomeHider">Predicted Result = {{finalResult}}</h5>
                     </div>
             </div>
         </div>
