--- a/public/assets/views/dashboardViews/myProfile.html
+++ b/public/assets/views/dashboardViews/myProfile.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-xs-6 col-xs-offset-3">
+        <div class="col-xs-12 col-md-4 col-md-offset-4">
         
             <!-- <img src="/assets/img/cover.jpg" alt="profileDp" style="max-width:300px;max-height:300px;"> -->
             <figure class="snip1344">
