few minor design changes

--- a/public/assets/views/dashboardViews/myHistory.html
+++ b/public/assets/views/dashboardViews/myHistory.html
@@ -1,6 +1,6 @@
 <div class="container">
         <div class="row" >
-            <div class="col-xs-6 col-xs-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3" style="background-color:#0b3a6e">
+            <div class="col-xs-12 col-md-6 col-md-offset-3" style="background-color:#0b3a6e">
 
                 <div class="form-group">
                     <h2 style="color:#FFFFFF;text-align:center;">Class 5</h2>
