--- a/public/assets/views/dashboardViews/myAnalytics.html
+++ b/public/assets/views/dashboardViews/myAnalytics.html
@@ -1,83 +1,83 @@
 <div class="container">
     <div class="container">
         <div class="row">
-            <div class="col-xs-8 col-xs-offset-2 ">
+            <div class="col-xs-12 col-md-8 col-md-offset-2">
                 <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSource5}}"></div>
             </div>
         </div>
         <br>
         <div class="row">
-            <div class="col-xs-8 col-xs-offset-2 ">
+            <div class="col-xs-12 col-md-8 col-md-offset-2">
                 <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSource6}}"></div>
             </div>
         </div><br>
         <div class="row">
-            <div class="col-xs-8 col-xs-offset-2 ">
+            <div class="col-xs-12 col-md-8 col-md-offset-2">
                 <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSource7}}"></div>
             </div>
         </div><br>
         <div class="row">
-            <div class="col-xs-8 col-xs-offset-2 ">
+            <div class="col-xs-12 col-md-8 col-md-offset-2">
                 <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSource8}}"></div>
             </div>
         </div><br>
         <div class="row">
-            <div class="col-xs-8 col-xs-offset-2 ">
+            <div class="col-xs-12 col-md-8 col-md-offset-2">
                 <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSource9}}"></div>
             </div>
         </div><br>
         <div class="row">
-            <div class="col-xs-8 col-xs-offset-2 ">
+            <div class="col-xs-12 col-md-8 col-md-offset-2">
                 <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSource10}}"></div>
             </div>
         </div><br>
         <div class="row">
-            <div class="col-xs-8 col-xs-offset-2 ">
+            <div class="col-xs-12 col-md-8 col-md-offset-2">
                 <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSource11}}"></div>
             </div>
         </div><br>
         <div class="row">
-            <div class="col-xs-8 col-xs-offset-2 ">
+            <div class="col-xs-12 col-md-8 col-md-offset-2">
                 <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSource12}}"></div>
             </div>
         </div><br>
         <div class="row">
-            <div class="col-xs-8 col-xs-offset-2 ">
+            <div class="col-xs-12 col-md-8 col-md-offset-2">
                 <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSourceSem1}}"></div>
             </div>
         </div><br>
         <div class="row">
-            <div class="col-xs-8 col-xs-offset-2 ">
+            <div class="col-xs-12 col-md-8 col-md-offset-2">
                 <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSourceSem2}}"></div>
             </div>
         </div><br>
         <div class="row">
-            <div class="col-xs-8 col-xs-offset-2 ">
+            <div class="col-xs-12 col-md-8 col-md-offset-2">
                 <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSourceSem3}}"></div>
             </div>
         </div><br>
         <div class="row">
-            <div class="col-xs-8 col-xs-offset-2 ">
+            <div class="col-xs-12 col-md-8 col-md-offset-2">
                 <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSourceSem4}}"></div>
             </div>
         </div><br>
         <div class="row">
-            <div class="col-xs-8 col-xs-offset-2 ">
+            <div class="col-xs-12 col-md-8 col-md-offset-2">
                 <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSourceSem5}}"></div>
             </div>
         </div><br>
         <div class="row">
-            <div class="col-xs-8 col-xs-offset-2 ">
+            <div class="col-xs-12 col-md-8 col-md-offset-2">
                 <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSourceSem6}}"></div>
             </div>
         </div><br>
         <div class="row">
-            <div class="col-xs-8 col-xs-offset-2 ">
+            <div class="col-xs-12 col-md-8 col-md-offset-2">
                 <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSourceSem7}}"></div>
             </div>
         </div><br>
         <div class="row">
-            <div class="col-xs-8 col-xs-offset-2 ">
+            <div class="col-xs-12 col-md-8 col-md-offset-2">
                 <div fusioncharts width="100%" height="400px" type="column2d" dataSource="{{myDataSourceSem8}}"></div>
             </div>
         </div>
