latest update after removing all bugs

--- a/public/assets/views/dashboardViews/myPredictor.html
+++ b/public/assets/views/dashboardViews/myPredictor.html
@@ -11,7 +11,7 @@
                             <option value="school">School</option>
                         </select>
                     
-                        <h4 style="color:#FFFFFF;text-align:center;">Select Class.</h4>
+                        <h4 style="color:#FFFFFF;text-align:center;">{{classType}}.</h4>
                         <select class="form-control" ng-model="selectedClass" ng-hide="schoolLevel">
                             <option value="9">9th</option>
                             <option value="10">10th</option>
